# llm2sql

./: .env.example  .gitignore  CLAUDE.md  README.md  dashboard.py  modal_app.py  modal_train.py  pyproject.toml  run_benchmark.py
llm2sql/: config.py  evaluate.py  inference.py  models.py  prompt.py  queries.py  schema.py  seed.py  training_queries.py
